--- a/scss/render.scss
+++ b/scss/render.scss
@@ -65,6 +65,7 @@ $rgb-inset-border: #656565;
 			margin-bottom: 10px;
 			padding-left: 24px;
 			text-indent: 0;
+			list-style-position: inside;
 
 			// FIXME(future) alternately, `&:has(+ .rd__list) { margin-bottom: 0; }` when browser support exists for :has
 			+ .rd__list {
